--- a/assignment/assignment_programming.ipynb
+++ b/assignment/assignment_programming.ipynb
@@ -239,12 +239,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "id": "f42ab788-af0c-47a4-a103-46c9a37bfad3",
       "metadata": {
-        "id": "f42ab788-af0c-47a4-a103-46c9a37bfad3"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "f42ab788-af0c-47a4-a103-46c9a37bfad3",
+        "outputId": "087c52c1-6b9d-42ba-b0f5-dc091b558ec3"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Average: -1.0899806430403438 \n",
+            "\n",
+            "Standard Deviation: 3.2847981697718236 \n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "import numpy as np\n",
         "import math as math\n",
@@ -257,7 +272,21 @@
         "x = sample[:,0]\n",
         "y = sample[:,1]\n",
         "\n",
-        "#############################################################################\n"
+        "#############################################################################\n",
+        "\n",
+        "\n",
+        "# 1\n",
+        "def average(x):\n",
+        "  avg = np.sum(x) / len(x)\n",
+        "  return avg\n",
+        "print('Average:', average(x), '\\n')\n",
+        "\n",
+        "# 2\n",
+        "def standard_deviation(x):\n",
+        "  ssd = np.sum((x - average(x)) **2)\n",
+        "  sd = np.sqrt(ssd/(len(x)-1))\n",
+        "  return sd\n",
+        "print('Standard Deviation:', standard_deviation(x), '\\n')\n"
       ]
     },
     {
