--- a/assignment/assignment_programming.ipynb
+++ b/assignment/assignment_programming.ipynb
@@ -239,14 +239,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 14,
       "id": "f42ab788-af0c-47a4-a103-46c9a37bfad3",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "f42ab788-af0c-47a4-a103-46c9a37bfad3",
-        "outputId": "8fde26b3-3cf5-4287-f78c-62c81613e580"
+        "outputId": "25809ed2-29f4-4734-e931-6f3472c3d773"
       },
       "outputs": [
         {
@@ -307,7 +307,10 @@
             "  1.08096701e+00 -2.94861751e-01 -7.20383713e-01  1.44460597e+00\n",
             "  1.82905529e+00  4.20105328e-01  5.68995033e-01  1.48421475e-01\n",
             "  2.99707746e-01 -1.77741458e-02  2.00910916e+00  6.86685548e-04] \n",
-            "\n"
+            "\n",
+            "Covariance: -2.8396505928938773 \n",
+            "\n",
+            "Correlation: -0.42205093921264875\n"
           ]
         }
       ],
@@ -345,7 +348,19 @@
         "  return z\n",
         "print(\"Z score:\", standard_zscore(x), '\\n')\n",
         "\n",
-        "# 4\n"
+        "# 4\n",
+        "def covariance(x, y):\n",
+        "  sumsqdiff = np.sum((x-average(x))* (y-average(y)))\n",
+        "  cov = sumsqdiff / (len(x)-1)\n",
+        "  return cov\n",
+        "print(\"Covariance:\", covariance(x,y), '\\n')\n",
+        "\n",
+        "# 5\n",
+        "def correlation(x,y):\n",
+        "  r = covariance(x,y) / (standard_deviation(x) * standard_deviation(y))\n",
+        "  return r\n",
+        "print(\"Correlation:\", correlation(x,y))\n",
+        "\n"
       ]
     },
     {
